Update of Portfolio

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <br>
             <section id="bg">
                 <div id="header-intro">
+                    <p>Let's build the web together...</p>
                     <h1 id="name">Hi, I am <span>Kukah</span></h1>
                     <h2>a Web Developer and aspiring 
-                        <br> vb
+                        <br>
                          CyberSecurity Analyst</h2>
                 </div>
             </section>
