--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
+        <div id="header">
                 <nav>
                     <h2 id="logo_name">Kukah</h2>
                     <ul>
@@ -18,13 +18,14 @@
                         <li><a href="#">Contact Me</a></li>
                     </ul>
                 </nav>
+                <hr>
         </div>
         <main>
             <br>
             <section id="bg">
                 <div id="header-intro">
                     <p>Let's build the web together...</p>
-                    <h1 id="name">Hi, I am <span>Kukah</span></h1>
+                    <h1 id="name">Hi, I am <span class="span-orange">Kukah</span></h1>
                     <h2>a Web Developer and aspiring 
                         <br>
                          CyberSecurity Analyst</h2>
