--- a/index.html
+++ b/index.html
@@ -5,32 +5,62 @@
         <meta name="viewport" content="width:device-width" initial scale="1.0"/>
         <title>I am Kukah</title>
         <link rel="stylesheet" href="style.css">
+         <!-- Load library from the CDN -->
+            <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+            <!-- Setup and start animation! -->
+            <!-- Element to contain animated typing -->
+        <script>
+   
+            var typed = new Typed('#span-orange', {
+            strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','and CyberSecurity Analyst'],
+            typeSpeed: 80,
+            });
+        </script>
     </head>
     <body>
         <div id="header">
                 <nav>
                     <h2 id="logo_name">Kukah</h2>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">About Me</a></li>
+                        <li><a href="#">Home </a></li>
+                        <li><a href="#">Portfolio </a></li>
+                        <li><a href="#">Services </a></li>
+                        <li><a href="#">About Me </a></li>
                         <li><a href="#">Contact Me</a></li>
                     </ul>
                 </nav>
                 <hr>
-        </div>
-        <main>
+        
+            <main>
             <br>
             <section id="bg">
                 <div id="header-intro">
-                    <p>Let's build the web together...</p>
-                    <h1 id="name">Hi, I am <span class="span-orange">Kukah</span></h1>
-                    <h2>a Web Developer and aspiring 
-                        <br>
-                         CyberSecurity Analyst</h2>
-                </div>
-            </section>
-        </main>
+                        <h3>Let's build the web together...</h3>
+                        <div id="top-me">
+                            <h1 id="name">Hi, I'm 
+                                <span id="span-orange">Kukah</span>
+                            </h1>
+                        </div>
+ 
+                            </h2>
+                    </div>
+                </section>
+            </main>
+    </div>
     </body>
+     <!-- Load library from the CDN -->
+     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+     <!-- Setup and start animation! -->
+     <!-- Element to contain animated typing -->
+ <script>
+
+     var typed = new Typed('#span-orange', {
+     strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','a CyberSecurity Analyst',
+     'Kukah, a Web Developer <br> Graphic Designer and a <br> Junior CyberSecurity Analyst.'
+    ],
+     typeSpeed: 80,
+     });
+ </script>
 </html>
