--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
             <main>
             <br>
             <section id="bg">
-                <div id="header-intro">
+                
                         <h3>Let's build the web together...</h3>
                         <div id="top-me">
                             <h1 id="name">Hi, I'm 
                                 <span id="span-orange">Kukah</span>
                             </h1>
                         </div>
- 
-                            </h2>
-                    </div>
-                </section>
+                <div id="header-intro">        
+                    <p>
+                        I am a deligent Developer aimed at delivering time bound quality and creative works to clients. 
+                    <br> Always looking forward to learning from anybody at all. 
+                    <br> I am currently learning new technologies and improving upon the quality of my delivery.  
+                    </p>  
+                </div>
+            </section>
             </main>
     </div>
     </body>
@@ -57,7 +61,7 @@
  <script>
 
      var typed = new Typed('#span-orange', {
-     strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','a CyberSecurity Analyst',
+     strings: ['Kukah Gilbert Elikplim','a Web Developer','a Graphic Designer','a CyberSecurity Analyst',
      'Kukah, a Web Developer <br> Graphic Designer and a <br> Junior CyberSecurity Analyst.'
     ],
      typeSpeed: 80,
