--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                     </p>  
                 </div>
             </section>
+
+            <section id="about">
+                <h2>About</h2>
+            </section>
             </main>
     </div>
     </body>
