--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>I am Kukah</title>
         <link rel="stylesheet" href="style.css">
          <!-- Load library from the CDN -->
-            <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+           <script src="./typed.js"></script>
+           <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
             <!-- Setup and start animation! -->
             <!-- Element to contain animated typing -->
