--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
     <head>
         <meta charset="UT-8"/>
         <meta name="viewport" content="width:device-width" initial scale="1.0"/>
-        <title>I am Kukah</title>
+        <title>I am Kukah | Gilbert Elikplim Kukah</title>
         <link rel="stylesheet" href="style.css">
          <!-- Load library from the CDN -->
-           <script src="./typed.js"></script>
-           <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+        <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
             <!-- Setup and start animation! -->
             <!-- Element to contain animated typing -->
         <script>
-   
             var typed = new Typed('#span-orange', {
             strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','and CyberSecurity Analyst'],
             typeSpeed: 80,
@@ -22,12 +20,12 @@
     <body>
         <div id="header">
                 <nav>
-                    <h2 id="logo_name">Kukah</h2>
+                    <h2 id="logo_name">I am Kukah</h2>
                     <ul>
-                        <li><a href="#">Home </a></li>
+                        <li><a href="#header">Home </a></li>
                         <li><a href="#">Portfolio </a></li>
                         <li><a href="#">Services </a></li>
-                        <li><a href="#">About Me </a></li>
+                        <li><a href="#about">About Me </a></li>
                         <li><a href="#">Contact Me</a></li>
                     </ul>
                 </nav>
@@ -53,23 +51,14 @@
             </section>
 
             <section id="about">
-                <h2>About</h2>
+                <h2>ABOUT ME</h2>
+                <p>Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
+                    I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also 
+
+                </p>
             </section>
             </main>
     </div>
     </body>
-     <!-- Load library from the CDN -->
-     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
-     <!-- Setup and start animation! -->
-     <!-- Element to contain animated typing -->
- <script>
-
-     var typed = new Typed('#span-orange', {
-     strings: ['Kukah Gilbert Elikplim','a Web Developer','a Graphic Designer','a CyberSecurity Analyst',
-     'Kukah, a Web Developer <br> Graphic Designer and a <br> Junior CyberSecurity Analyst.'
-    ],
-     typeSpeed: 80,
-     });
- </script>
+   
 </html>
