--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <section id="about">
                 <h2>ABOUT ME</h2>
-                <p>Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
+                <p id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
                     I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also 
 
                 </p>
