--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <main>
             <br>
             <section id="bg">
-                
+    
                         <h3>Let's build the web together...</h3>
                         <div id="top-me">
                             <h1 id="name">Hi, I'm 
@@ -51,7 +51,7 @@
             </section>
 
             <section id="about">
-                <h2>ABOUT ME</h2>
+                <div class="topic-header"><h2>ABOUT ME</h2></div>
                 <p id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
                     I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also 
 
