Social Media Channels

--- a/index.html
+++ b/index.html
@@ -5,17 +5,6 @@
         <meta name="viewport" content="width:device-width" initial scale="1.0"/>
         <title>I am Kukah | Gilbert Elikplim Kukah</title>
         <link rel="stylesheet" href="style.css">
-         <!-- Load library from the CDN -->
-        <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
-            <!-- Setup and start animation! -->
-            <!-- Element to contain animated typing -->
-        <script>
-            var typed = new Typed('#span-orange', {
-            strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','and CyberSecurity Analyst'],
-            typeSpeed: 80,
-            });
-        </script>
     </head>
     <body>
         <div id="header">
@@ -46,12 +35,24 @@
                         I am a deligent Developer aimed at delivering time bound quality and creative works to clients. 
                     <br> Always looking forward to learning from anybody at all. 
                     <br> I am currently learning new technologies and improving upon the quality of my delivery.  
-                    </p>  
+                    </p> 
+                <div id="social-icons">
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/WhatsApp.svg" alt="WhatsApp"></a>
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Youtube.svg" alt="Youtube"></a>
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Github.svg" alt="Github"></a>
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Twitter.svg" alt="Twitter"></a>
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Instagram.svg" alt="Instagram"></a>
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Facebook.svg" alt="Facebook"></a>
+                    <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Pinterest.svg" alt="Pinterest"></a>
+                    
+
+                </div>
                 </div>
             </section>
 
             <section id="about">
                 <div class="topic-header"><h2>ABOUT ME</h2></div>
+                <br>
                 <p id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
                     I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also 
 
@@ -60,5 +61,15 @@
             </main>
     </div>
     </body>
-   
+    <!-- Load library from the CDN -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+    <!-- Setup and start animation! -->
+    <!-- Element to contain animated typing -->
+<script>
+    var typed = new Typed('#span-orange', {
+    strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','a CyberSecurity Analyst', "Kukah. I'm a Web Developer <br> Graphic Designer and a <br> Junior CyberSecurity Analyst."],
+    typeSpeed: 80,
+    });
+</script>
 </html>
