--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UT-8"/>
         <meta name="viewport" content="width:device-width" initial scale="1.0"/>
         <title>I am Kukah | Gilbert Elikplim Kukah</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <script src="./js/typed.js"></script>
     </head>
     <body>
         <div id="header">
@@ -61,15 +62,4 @@
             </main>
     </div>
     </body>
-    <!-- Load library from the CDN -->
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
-    <!-- Setup and start animation! -->
-    <!-- Element to contain animated typing -->
-<script>
-    var typed = new Typed('#span-orange', {
-    strings: ['Kukah Gilbert Elikplim','a Web Developer', 'a Graphic Designer','a CyberSecurity Analyst', "Kukah. I'm a Web Developer <br> Graphic Designer and a <br> Junior CyberSecurity Analyst."],
-    typeSpeed: 80,
-    });
-</script>
 </html>
