--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         </div>
                 <div id="header-intro">        
                     <p>
-                        I am a deligent Developer aimed at delivering time bound quality and creative works to clients. 
+                        I am a deligent Developer aimed at delivering <br> time bound quality and creative works to clients. 
                     <br> Always looking forward to learning from anybody at all. 
-                    <br> I am currently learning new technologies and improving upon the quality of my delivery.  
+                    <br> I am currently learning new technologies and <br> improving upon the quality of my delivery.  
                     </p> 
                 <div id="social-icons">
                     <a href="#"> <img class="social-icons" src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/WhatsApp.svg" alt="WhatsApp"></a>
