--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 
                 <br>
                 <div id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
-                I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also 
+                I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also dedicated and aiming at owning the most efficient Cyber security Agency in Ghana and the at large the whole world
+
+                <button name="download-cv" type="menu" class="button">Downlaod CV</button>
                 </div>
                 <div id="me">
                     <img src="./me.png" alt="Kukah" width="323px" height="429px">
