--- a/index.html
+++ b/index.html
@@ -41,18 +41,49 @@
             <a href="#"> <img class="social-icons" /*src="https://raw.githubusercontent.com/gauravghongde/social-icons/9d939e1c5b7ea4a24ac39c3e4631970c0aa1b920/SVG/Color/Pinterest.svg" src="./svg/Pinterest.svg" alt="Pinterest"></a>
         </div>  
     </section>
-    <div class="topic-header"><h2>ABOUT ME</h2></div>
+    <div class="topic-header"><h2>About Me</h2></div>
         <section id="about">
-                <br>
                 <div id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
-                I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also dedicated and aiming at owning the most efficient Cyber security Agency in Ghana and the at large the whole world
-
+                I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also dedicated and aiming at owning the most efficient Cyber security Agency in Ghana and the at large the whole world.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, exercitationem quaerat! Veniam illum, repellat rerum facere illo unde ratione perferendis provident quidem, harum voluptas laudantium magnam impedit doloribus, explicabo dolores?         
                 <button name="download-cv" type="menu" class="button">Downlaod CV</button>
+                
+
                 </div>
                 <div id="me">
-                    <img src="./me.png" alt="Kukah" width="323px" height="429px">
+                    <img src="./me.png" alt="Kukah" width="500px" height="449px">
                 </div>
             </section>
+    <div class="topic-header">Services</div>
+    <h3>Services that i provide include the following...</h3>
+
+    <section id="services">
+        <div class="serv">
+          <img src="web-development.png" alt="Web Development" class="serv-icon">
+          <span class="serv-text">Web Development</span>
+        </div>
+        <div class="serv">
+          <img src="graphic-design.png" alt="Graphic Design" class="serv-icon">
+          <span class="serv-text">Graphic Design</span>
+        </div>
+        <div class="serv">
+          <img src="ui-ux-design.png" alt="UI/UX Design" class="serv-icon">
+          <span class="serv-text">UI/UX Design</span>
+        </div>
+        <div class="serv">
+          <img src="software-development.png" alt="Software Development" class="serv-icon">
+          <span class="serv-text">Software Development</span>
+        </div>
+        <div class="serv">
+          <img src="database-development.png" alt="Database Development" class="serv-icon">
+          <span class="serv-text">Database Development</span>
+        </div>
+        <div class="serv">
+          <img src="video-editing.png" alt="Video Editing" class="serv-icon">
+          <span class="serv-text">Video Editing</span>
+        </div>
+      </section>
+      
 
     <script src="./js/typed.js"></script>
     </body>
