--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
 
     <section id="services">
         <div class="serv">
-          <img src="web-development.png" alt="Web Development" class="serv-icon">
+          <img src="./images/web-development.png" alt="Web Development" class="serv-icon">
           <span class="serv-text">Web Development</span>
         </div>
         <div class="serv">
-          <img src="graphic-design.png" alt="Graphic Design" class="serv-icon">
+          <img src="./images/graphic-design.png" alt="Graphic Design" class="serv-icon">
           <span class="serv-text">Graphic Design</span>
         </div>
         <div class="serv">
-          <img src="ui-ux-design.png" alt="UI/UX Design" class="serv-icon">
+          <img src="./images/ui-ux-design.png" alt="UI/UX Design" class="serv-icon">
           <span class="serv-text">UI/UX Design</span>
         </div>
         <div class="serv">
-          <img src="software-development.png" alt="Software Development" class="serv-icon">
+          <img src="./images/software-development.png" alt="Software Development" class="serv-icon">
           <span class="serv-text">Software Development</span>
         </div>
         <div class="serv">
-          <img src="database-development.png" alt="Database Development" class="serv-icon">
+          <img src="./images/database-development.png" alt="Database Development" class="serv-icon">
           <span class="serv-text">Database Development</span>
         </div>
         <div class="serv">
-          <img src="video-editing.png" alt="Video Editing" class="serv-icon">
+          <img src="./images/video-editing.png" alt="Video Editing" class="serv-icon">
           <span class="serv-text">Video Editing</span>
         </div>
       </section>
