--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="./me.png" alt="Kukah" width="500px" height="449px">
                 </div>
             </section>
-    <div class="topic-header">Services</div>
+    <div class="topic-header"><h2>Services</h2></div>
     <h3>Services that i provide include the following...</h3>
 
     <section id="services">
