Revert "Auto commit at 06-01-2023  0-41-08"
This reverts commit 874daf35c5a0cc9aae5fabff24967aafd122ebde.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <nav>
         <h2 id="logo_name">I am Kukah</h2>
         <ul>
-           <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
+           <li><a href="#header">Home </a></li>
+            <li><a href="#">Portfolio </a></li>
+            <li><a href="#">Services </a></li>
+            <li><a href="#about">About Me</a></li>
             <li><a href="#">Contact Me</a></li>
         </ul>
     </nav>
-   
+    <hr>
     <section id="header">
         <h3>Let's build the web together....</h3>
 
@@ -46,12 +46,10 @@
     <div class="topic-header"><h2>About Me</h2></div>
         <section id="about">
 
-                <div id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies. 
-                I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also dedicated and aiming at owning the most efficient Cyber security Agency in Ghana and the at large the whole world. 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, exercitationem quaerat! Veniam illum, repellat rerum facere illo underatione perferendis provident quidem, harum voluptas laudantium magnam impedit doloribus, explicabo dolores?  
-                <br>
-                <br>       
-                 <button name="download-cv" type="menu" class="button">Downlaod CV</button>
+                <div id="about_text">Gilbert is the name, a simple gentleman who loves arts, music, business and most especially technologies.
+                I am a CyberSecurity enthusiast looking forward to becoming a well established CyberSecurity Analyst. I am also dedicated and aiming at owning the most efficient Cyber security Agency in Ghana and the at large the whole world.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, exercitationem quaerat! Veniam illum, repellat rerum facere illo unde ratione perferendis provident quidem, harum voluptas laudantium magnam impedit doloribus, explicabo dolores?         
+                <br> <button name="download-cv" type="menu" class="button">Downlaod CV</button>
                 
 
                 </div>
