--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
            <li><a href="#header">Home </a></li>
             <li><a href="#">Portfolio </a></li>
             <li><a href="#">Services </a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="https://profitableclue.com/b.3vV/0/Pk3mpnvubxmHV/JtZhDX0/0eOOT-IQwLNyz/ci0rL/TQQg5-M_j/AA3pNOzzUz">About Me</a></li>
+            <li><a href="https://profitableclue.com/b.3vV/0/Pk3mpnvubxmHV/JtZhDX0/0eOOT-IQwLNyz/ci0rL/TQQg5-M_j/AA3pNOzzUz">Contact Me</a></li>
         </ul>
     </nav>
     <hr>
@@ -44,7 +44,7 @@
     </section>
     
         <div id="about">
-         
+         https://profitableclue.com/b.3vV/0/Pk3mpnvubxmHV/JtZhDX0/0eOOT-IQwLNyz/ci0rL/TQQg5-M_j/AA3pNOzzUz
 
                 <div id="about_text">
                   <div class="topic-header"><h2>About Me</h2></div>
